css/ipl.css
* {
    font-family: 'Manrope', sans-serif;
    font-weight: 600;
    scroll-behavior: smooth;
}

body {
    margin: 0;
    position: relative;
    background-color: var(--iplBackground2);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

:root {
    --iplBackground: white;
    --iplBackground2: #f8f8f8;
    --iplTextColor: #2d2d2d;
    --iplBackgroundAlpha: rgba(255, 255, 255, 0.85);
    --iplNavHover: rgba(34, 34, 34, 0.10);

    --iplBlack: #2d2d2d;
    --iplGreen: #09a100;
    --iplGreenHover: #056E00;
    --iplYellow: #FFBB01;
    --iplGray: #848C8E;
    --iplLightGrey: #D8DBE2;
    --separateGrey: #F8F8F8;
}

/* Dark Mode */

@media (prefers-color-scheme: dark) {
    :root {
        --iplBackground: #222;
        --iplBackground2: #111;
        --iplTextColor: white;
        --iplBackgroundAlpha: rgba(34, 34, 34, 0.85);
        --iplNavHover: rgba(255, 255, 255, 0.10);
    }
}

h1, h2 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
}

/* header */

header {
    padding-top: 25px;
    position: relative;
    display: flex;
    justify-content: center;
}

.header-content-wrapper.lg {
    height: 75vh;
}

.header-content-wrapper.md {
    height: 50vh;
}

.header-content-wrapper.sm {
    min-height: 0;
    margin-bottom: 20px;
}

.header-content-wrapper {
    margin: 0 25px;
    max-width: 1200px;
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    min-height: 475px;
    max-height: 650px;
}

.header-top {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-ipl-logo-link {
    text-decoration: none;
}

.header-ipl-logo {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.header-ipl-logo img {
    width: 100px;
}

.header-ipl-logo div {
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    text-decoration: none;
    color: var(--iplTextColor);
    font-size: 1.6em;
    margin-left: 5px;
}

.header-socials {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 5px;
    text-align: center;
    font-size: 25px;
}

.header-battlefy i {
    font-size: 35px;
    display: block;
    margin-top: -7px;
}

.header-socials * {
    height: 35px;
    width: 35px;
}

.header-image {
    background-size: cover;
    background-position: center center;
    width: 100%;
    height: 100%;
    top: 0; left: 0;
    position: absolute;
    z-index: -5;
}

.header-image::after {
    content: "";
    position: absolute;
    width: 100%; height: 100%;
    top: 0; left: 0;
    background-color: var(--iplBackgroundAlpha);
}

.header-image-main {
    background-image: url('../images/orgBanner.png');
}

.header-image-staff {
    background-image: url('../images/staffBanner.png');
}

.header-text-wrapper {
    display: flex;
    justify-content: center;
    flex-direction: column;
    flex-grow: 1;
}

.big-ipl-text {
    font-family: 'Montserrat';
    font-weight: 700;
    font-size: 2em;
    line-height: 100%;
}

.header-big-text {
    font-size: 3em;
    color: var(--iplTextColor);
    height: fit-content;
    margin-top: -25px;
}

.header-text-staff {
    font-size: 2em;
    font-family: 'Montserrat';
    font-weight: 700;
}

.header-cta {
    margin-top: 25px;
}

.socials-nav-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
    border-radius: 2px;
}

.header-nav {
    margin-right: 15px;
}

.header-nav a {
    text-decoration: none;
    color: var(--iplTextColor);
    margin-right: 5px;
    font-size: 1.25em;
    font-weight: 800;
    transition-duration: 100ms;
    border-radius: 2px;
    padding: 5px 10px;
}

.header-nav a:hover {
    background-color: var(--iplNavHover);
}

@media (max-width: 1000px) {
    .header-big-text {
        font-size: 6vw;
    }

    .big-ipl-text {
        font-size: 1.5em;
    }
}

.mobile-menu-btn {
    display: none;
    color: var(--iplTextColor);
    font-size: 2em;
    margin-right: 5px;
}

@media (max-width: 800px) {
    .socials-nav-wrapper[aria-expanded="false"] {
        opacity: 0;
    }

    .socials-nav-wrapper {
        position: absolute;
        top: 125px;
        right: -5px;
        background:rgba(34, 34, 34, 0.95);
        flex-direction: column;
        align-items: center;
        padding: 5px;
        opacity: 1;
        transition-duration: 100ms;
    }

    .header-nav {
        margin-right: 0;
        display: flex;
        flex-direction: column;
        text-align: center;
        font-size: 1.2em;
    }

    .header-nav a {
        margin: 2.5px 5px;
        padding: 0;
        color: white;
    }

    .header-icon {
        color: white !important;
    }

    .header-socials {
        margin-top: 8px;
        font-size: 30px;
    }

    .header-battlefy i {
        font-size: 42px;
        margin-top: -10px;
    }

    .header-socials * {
        height: 45px;
        width: 45px;
    }

    .mobile-menu-btn {
        display: unset;
    }
    
}

@media (max-width: 650px) {
    .header-content-wrapper {
        min-height: 400px;
        max-height: 500px;
    }

    .header-content-wrapper.md {
        min-height: 250px;
        height: 250px;
    }
}

@media (max-width: 425px) {
    .socials-nav-wrapper {
        width: 100%;
    }

    .header-content-wrapper {
        margin: 0 10px;
        min-height: 300px;
        max-height: 400px;
    }
}

@media (max-width: 375px) {
    .header-ipl-logo div {
        font-size: 6vw;
    }

    .header-ipl-logo img {
        width: 22vw;
        height: 22vw;
    }
}

/* Icon colours */

.header-youtube:hover {
    color: #FF0000;
}

.header-twitter:hover {
    color: #1DA1F2;
}

.twitter-solid {
    color: #1DA1F2;
}

.header-discord:hover {
    color: #7289DA;
}

.header-patreon:hover {
    color: #f86754;
}

.header-battlefy:hover{
    color: #dd4b5e;
}

.header-twitch:hover {
    color: #9146FF;
}

.header-github:hover {
    color: #b4b5b6;
}

.header-facebook:hover {
    color: #4267B2;
}

.icon-footer{
    font-size: 65px;
}

.header-icon {
    color: var(--iplTextColor);
    transition-duration: 100ms;
    border-radius: 2px;
}

.header-icon:hover {
    background-color: var(--iplNavHover);
}


/* welcome image */

.top-banner {
    height: 400px;
    width: 100%;
    position: relative;
}

.top-banner::before {
    content: "";
    position: absolute;
    top: 0; left: 0;
    width: 100%; height: 100%;
    background: linear-gradient(180deg, var(--iplBackground2) 0%, transparent 2.5%, transparent 97.5%, var(--iplBackground) 100%);
    z-index: 100;
    pointer-events: none;
}

.top-banner-image {
    background-image: url('../images/orgBanner.png');
    background-size: cover;
    background-position: center center;
    filter: opacity(30%);
    height: inherit;
    z-index: -10;
}

.staff-banner-image {
    background-image: url('../images/staffBanner.png');
    background-size: cover;
    background-position: center center;
    filter: opacity(30%);
    height: inherit;
    z-index: -10;
}

.top-banner-text {
    font-weight: 800;
    font-size: 2em;
    text-align: center;
    margin: 0;
    margin-top: -15px;
}

.top-banner-wrapper {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: center;
    flex-direction: column;
}

.top-banner-wrapper a {
    margin-top: 10px;
    display: inline-block;
}

/* Who are we? */

.intro-section {
    margin: 0 !important;
}

.intro-text {
    margin-right: 10px;
}

.intro-text h2 {
    margin: 0;
}

.intro-text p {
    font-size: 1.35em;
    margin-bottom: 5px;
}

/* Button styles */

a.link-button.btn-green {
    background-color: var(--iplGreen);
}

a.link-button.btn-green:hover {
    background-color: var(--iplGreenHover);
}

a.link-button {
    background-color: var(--iplBlack);
    color: white;
    padding: 15px;
    border-radius: 3px;
    text-decoration: none;
    transition-duration: 100ms;
    display: inline-block;
    margin: 2.5px;
}

a.link-button:hover {
    background-color: black;
}

a.link-button-border {
    background-color: transparent;
    border: 3px solid var(--iplTextColor);
    color: var(--iplTextColor);
    padding: 12px;
}

a.link-button-border:hover {
    background-color: var(--iplTextColor);
    color: var(--iplBackground);
}

/* Misc. utility styles */

.section {
    margin: 25px;
    background-color: var(--iplBackground);
    padding: 15px 30px;
}

h2 {
    margin: 15px 5px;
    font-size: 3em;
}

h4 {
    margin: 15px 5px;
}

h1, h2, h3, h4, p {
    color: var(--iplTextColor);
}

@media (max-width: 576px) {
    .section {
        margin: 5px;
        padding: 10px;
    }
}

@media (max-width: 425px) {
    h2 {
        font-size: 2.5em;
    }
}

/* Cards - used for tournaments and staff page */

.card-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 15px;
    align-items: flex-start;
    margin: 0 10px;
}

.card {
    background-color: var(--iplBackground);
    padding: 10px;
    border-radius: 10px;
    position: relative;
    color: var(--iplTextColor);
}

.card-text h3 {
    font-size: 1.75em;
    margin: 10px 0;
    text-align: center;
    overflow-wrap: anywhere;
    font-family: 'Montserrat', sans-serif;
    line-height: 1.2em;
}

.card-text h4 {
    margin: 0;
    margin-bottom: 10px;
    text-align: center;
    overflow-wrap: anywhere;
}

.card-text p {
    margin: 5px 0;
}

.card img {
    border-radius: 50%;
    width: 100px;
    display: block;
    margin: 10px auto 0 auto;
}

.card-link {
    font-weight: bold;
    font-size: 1.1em;
}

.card-link a {
    text-decoration: none;
}

@media (max-width: 900px) {
    .card-grid {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 700px) {
    .card img {
        width: 30%;
    }
}

@media (max-width: 576px) {
    .card-grid {
        grid-template-columns: 1fr;
    }

    .card-title {
        /* don't go off screen we need you :( */
        font-size: 10vw;
    }
}

/* Footer */

footer {
    background-color: var(--iplBackground);
    position: relative;
    text-align: center;
    bottom: 0;
    color: white;
    width: 100%;
    padding: 2rem 0;
    flex-shrink: 0;
}

.page-wrapper {
    flex: 1 0 auto;
}

footer h4 {
    margin: 0 5px;
}

.padding-space{
    padding: 1.5rem;
}

.twitter-link:visited{
    text-decoration: none;
}

.page-content {
    flex-grow: 1;
}

/* Wrapper to prevent stuff from getting too wide */

.width-wrapper {
    max-width: 1000px;
    margin: 0 auto;
}

